mcfootball-generator/src/test/resources/football/invalid/NonConsecutiveSeason.fb
/* Invalid — triggers 0xFC024: season "2025-2027" has a 2-year gap (not consecutive). */
footballsite NonConsecutiveSeasonTest {

  navigation { Testland; }

  country Testland {
    league TestLeague season "2025-2027" {
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Team Alpha"   ("CityA")
        away    "Team Beta"    ("CityB")
        score   1 - 0
        stadium "Test Arena"
      }
    }
  }

}
